--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <div class="card-body">
             <div class="h5">Senior High School</div>
             <p class="category">SMA Taruna Terpadu Borcess (MIPA)</p>
-            <p>SMA Negeri 1 Bogor is a public high school in the city of Bogor, West Java. This school is a favorite school with the highest pass-in grade in the city of Bogor and has repeatedly been the school with the highest average UAN score in the city of Bogor. SMA Negeri 1 Bogor received an A (very good) accreditation rating with a final accreditation score of 95.10. This school is located on Jalan Ir. H. Juanda number 16 Central Bogor, Bogor, adjacent to the office of the Mayor of Bogor, Bogor Palace, and the Bogor Botanical Gardens.</p>
+            <p> SMAS TARUNA TERPADU (BORCESS) is one of educational units with a high school level in Parakan Jaya, Kecamatan Kemang, Kabupaten Bogor, West Java. In carrying out its activities, SMAS TARUNA TERPADU (BORCESS) is under the auspices of the Ministry of Education and Culture. Address Of Integrated cadets high school, SMAS TARUNA TERPADU (BORCESS) is located at JL. RAYA SEMPLAK SALABENDA BLK.TELKOM DS.PARAKAN JAYA, Kec.Kemang, Kab.Bogor, West Java, with postal code 16310.</p>
           </div>
         </div>
       </div>
