--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <div class="profile-page sidebar-collapse">
         <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
             <div class="collapse navbar-collapse justify-content-end" id="navigation">
+              <div class="btn-group btn-group-sm no-index" role="group"><a href="https://github.com/MuhZikriH/MyCV.github.io.git" class="btn active"><span>ID</span><span class="d-none">INDONESIA</span></a></div>
+              <div class="btn-group btn-group-sm no-index" role="group"><a href="https://github.com/MuhZikriH/MyCV.github.io.git" class="btn"><span>EN</span><span class="d-none">ENGLISH</span></a></div>
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">Personal Details</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
